RESOLVED FIXED Bug 104416
[Qt][EFL][WK2] Resizing the window doesn't always result in right content position
https://bugs.webkit.org/show_bug.cgi?id=104416
Summary [Qt][EFL][WK2] Resizing the window doesn't always result in right content pos...
Kenneth Rohde Christiansen
Reported 2012-12-07 16:34:02 PST
Load the fixed-position manual test. Scroll to the bottom. When I resize the window it doesn't set the right position and sometimes we even get position out of bounds (like use the fixed element test and scroll to bottom and then resize).
Attachments
Patch (4.62 KB, patch)
2012-12-10 08:59 PST, Kenneth Rohde Christiansen
no flags
Patch (6.17 KB, patch)
2012-12-11 04:03 PST, Kenneth Rohde Christiansen
hausmann: review+
Yael
Comment 1 2012-12-08 14:34:01 PST
Adding Qt to the title. I see the same problem in Qt's MiniBrowser.
Yael
Comment 2 2012-12-09 18:13:21 PST
Swapping the order of translate and scale in EwkViewImpl::transformFromScene, EwkViewImpl::displayTimerFired and not scaling EwkViewImpl::m_pagePosition in PageViewportControllerClientEfl::setViewportPosition is fixing the issue for EFL. The order of translate and scale was swapped in r136000. I will upload a proper patch tomorrow, after better understanding the implications of this swap.
Yael
Comment 3 2012-12-10 05:50:27 PST
Resetting assignee. Kenneth is working on this.
Kenneth Rohde Christiansen
Comment 4 2012-12-10 08:59:05 PST
Created attachment 178565 [details] Patch This fixes it, but it would be nice to have it tested with Qt to make sure it doesn't affect pinch zooming etc.
Dongseong Hwang
Comment 5 2012-12-10 17:12:45 PST
Great! Qt runs well with this patch. I tested in your scrolling test: http://www.dorothybrowser.com/test/webkitTest/css3/fixedelement.html However, I can not test pinch zoom. I just resized qt window.
Kenneth Rohde Christiansen
Comment 6 2012-12-11 04:03:51 PST
Kenneth Rohde Christiansen
Comment 7 2012-12-11 06:12:54 PST
Landed in 137304
Note You need to log in before you can comment on or make changes to this bug.